Updated Diaries Page and Fixed Some Bugs

--- a/src/pages/diaries/diaries.styles.css
+++ b/src/pages/diaries/diaries.styles.css
@@ -1,6 +1,6 @@
 .diaries-page__alignment {
   height: 100vh;
-  min-height: 650px;
+  min-height: 600px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -21,6 +21,60 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.diaries-page__top-bar {
+  height: 40px !important;
+  background: linear-gradient(
+    150deg,
+    rgba(1, 1, 1, 0.75),
+    rgba(48, 48, 48, 0.5),
+    rgba(1, 1, 1, 0.9)
+  ) !important;
+  transition: all 1s ease-in-out !important;
+}
+
+.diaries-page__top-bar:hover {
+  background: linear-gradient(
+    150deg,
+    rgba(48, 48, 48, 0.3),
+    rgba(1, 1, 1, 0.5),
+    rgba(48, 48, 48, 0.7)
+  ) !important;
+}
+
+.diaries-page__top-bar__container {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  flex-direction: row !important;
+}
+
+.diaries-page__top-bar__container button {
+  font-family: "Potta One", serif !important;
+}
+
+.diaries-page__tab-side {
+  flex-grow: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.diaries-page__tab-side__tabs {
+  border-right: 1px solid rgb(202, 202, 202);
+}
+
+.diaries-page__tab-side__tabs-list {
+  background-color: rgba(49, 49, 49, 0.8) !important;
+  color: white !important;
+  font-weight: bold !important;
+}
+
+.diaries-page__tab-side .MuiTabs-root {
+  overflow: visible !important;
 }
