--- a/src/pages/diaries/diaries.styles.css
+++ b/src/pages/diaries/diaries.styles.css
@@ -166,6 +166,8 @@
   border-radius: 5px;
   padding: 40px 25px;
   margin: 20px 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .tab-panel__note-name {
